# rwatch

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
examples/: readme.rs
src/: codec.rs  lib.rs  receiver.rs  sender.rs
