[package]
name = "rwatch"
version = "0.1.0"
edition = "2021"

[features]
default = ["json"]
json = ["serde_json"]

[dependencies]
tokio = { version = "1.45.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.135", optional = true }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
thiserror = "2.0.12"
futures = "0.3.31"
pin-project-lite = "0.2.16"
deadpool-redis = { version = "0.21.0", features = ["tokio-comp", "streams"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4"
